--- a/admin/student.html
+++ b/admin/student.html
@@ -80,6 +80,12 @@
     top: 0;
     left: 0;
   }
+#searchInput {
+        padding: 8px;
+        margin-bottom: 10px;
+        width: 100%;
+        box-sizing: border-box;
+      }
           
         </style>
     </head>
@@ -115,6 +121,7 @@
                 <li style="border: none;"><a href="report.html">Reports</a></li>
             </div>
         </div>
+
           <div class ="bl"></div>
           <div class = "a">
           <div class="student-list">
