--- a/admin/view.html
+++ b/admin/view.html
@@ -345,7 +345,7 @@
             <div class="filterEntries">
                 <div class="filter">
                     <label for="search" style="font-size: 20px;">Search:</label>
-                    <input type="search" id="searchInput" placeholder="Enter ID" style="font-size: 18px; margin-left: 10px;">
+                    <input type="search" id="searchInput" placeholder="Enter Printer ID" style="font-size: 18px; margin-left: 10px;">
                     <button onclick="searchById()">Search</button>
                     <button onclick="refreshTable()">Refresh</button>
                 </div>                
